Fix : add border radius open collapse

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -31,6 +31,7 @@
     color: $tertiary-color;
     padding: 10px;
     cursor: pointer;
+    border-radius: 10px;
   }
 
   &-title {
